--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@testing-library/react": "9.5.0",
     "@testing-library/user-event": "7.2.1",
     "@windmill/react-ui": "0.3.1",
+    "axios": "^1.6.7",
     "chart.js": "2.9.3",
     "classnames": "2.2.6",
+    "dotenv": "^16.4.5",
     "faker": "4.1.0",
     "react": "^16.13.1",
     "react-chartjs-2": "2.9.0",
